Fix mobile alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -112,7 +112,7 @@ section {
   left: 0;
 
   @media only screen and (min-width: 320px) and (max-width: 480px) {
-    left: 12px;
+    left: 24px;
   }
 
   &.is-tablet {
